--- a/packages/web-awesome/src/assets/scss/themes/_github-light.scss
+++ b/packages/web-awesome/src/assets/scss/themes/_github-light.scss
@@ -5,7 +5,7 @@
   --color-bg-primary: #ffffff;
   --color-bg-secondary: #f6f8fa;
   --color-bg-raised: #ffffff;
-  --color-bg-neutral: #eaeef2;
+  --color-bg-neutral: #d8dde3;
   --color-bg-overlay: rgba(0, 0, 0, 0.4);
   --color-bg-inverse-primary: #24292f;
   --color-bg-inverse-raised: #32383f;
