--- a/packages/web-awesome/src/assets/scss/themes/_one-light.scss
+++ b/packages/web-awesome/src/assets/scss/themes/_one-light.scss
@@ -1,11 +1,11 @@
 :root[data-color-scheme="one-light"] {
   color-scheme: light;
 
-  --color-bg-canvas: #f0f0f0;
+  --color-bg-canvas: #f0f0f1;
   --color-bg-primary: #fafafa;
-  --color-bg-secondary: #f0f0f0;
+  --color-bg-secondary: #f0f0f1;
   --color-bg-raised: #ffffff;
-  --color-bg-neutral: #e5e5e5;
+  --color-bg-neutral: #d8d8d8;
   --color-bg-overlay: rgba(0, 0, 0, 0.35);
   --color-bg-inverse-primary: #282c34;
   --color-bg-inverse-raised: #21252b;
