--- a/packages/web-awesome/src/assets/scss/themes/_solarized-light.scss
+++ b/packages/web-awesome/src/assets/scss/themes/_solarized-light.scss
@@ -4,8 +4,8 @@
   --color-bg-canvas: #fdf6e3;
   --color-bg-primary: #eee8d5;
   --color-bg-secondary: #fdf6e3;
-  --color-bg-raised: #eee8d5;
-  --color-bg-neutral: #ddd6c1;
+  --color-bg-raised: #fffef8;
+  --color-bg-neutral: #c8c0aa;
   --color-bg-overlay: rgba(0, 0, 0, 0.35);
   --color-bg-inverse-primary: #002b36;
   --color-bg-inverse-raised: #073642;
@@ -123,9 +123,9 @@
   --color-status-skipped-chart: #93a1a1;
   --color-status-skipped-chart-fill: #93a1a1;
 
-  --color-tag-default-bg: rgba(7, 54, 66, 0.08);
+  --color-tag-default-bg: rgba(7, 54, 66, 0.12);
   --color-tag-default-text: #073642;
-  --color-tag-secondary-bg: #ddd6c1;
+  --color-tag-secondary-bg: #c8c0aa;
   --color-tag-secondary-text: #586e75;
 
   --color-syntax-number: #6c71c4;
